talos-backup/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talos-backup
  labels:
    pod-security.kubernetes.io/enforce: restricted
