talos-backup/network-policy-talos-backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: talos-backup
  namespace: talos-backup
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: seaweedfs
          podSelector:
            matchLabels:
              app: seaweedfs-s3
      ports:
        - {protocol: TCP, port: 8333}
    - to:
        - ipBlock: {cidr: 192.168.1.100/32}
        - ipBlock: {cidr: 192.168.1.209/32}
        - ipBlock: {cidr: 192.168.1.242/32}
      ports:
        - {protocol: TCP, port: 50000}
